[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition.workspace = true
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/curp"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
async-trait = "0.1.81"
bincode = "1.3.3"
bytes = "1.9"
clippy-utilities = "0.2.0"
curp-external-api = { path = "../curp-external-api" }
curp-test-utils = { path = "../curp-test-utils" }
dashmap = "6.1.0"
derive_builder = "0.20.0"
engine = { path = "../engine" }
event-listener = "5.3.1"
flume = "0.11.0"
fs2 = "0.4.3"
futures = "0.3.21"
indexmap = "2.2.6"
itertools = "0.13"
madsim = { version = "0.2.27", features = ["rpc", "macros"] }
opentelemetry = { version = "0.24.0", features = ["metrics"] }
parking_lot = "0.12.3"
priority-queue = "2.0.2"
prost = "0.13"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
sha2 = "0.10.8"
thiserror = "1.0.61"
# Use real tokio instead of madsim-tokio (madsim will be removed)
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "net", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7.11"
tonic = { version = "0.5.0", package = "madsim-tonic", features = ["tls"] }
tower = { version = "0.4.13", features = ["filter"] }
tracing = { version = "0.1.37", features = ["std", "log", "attributes"] }
utils = { path = "../utils", version = "0.1.0" }

# QUIC dependencies
gm-quic = { git = "https://github.com/genmeta/gm-quic", rev = "4cbd9d93", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"], optional = true }

[dev-dependencies]
anyhow = "1.0.90"
curp-test-utils = { path = "../curp-test-utils" }
itertools = "0.13"
mockall = "0.12.1"
once_cell = "1.17.0"
rcgen = "0.13"
serial_test = "3"
tempfile = "3"
test-macros = { path = "../test-macros" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing-test = "0.2.4"

[build-dependencies]
prost-build = "0.13.0"
tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }

[features]
client-metrics = []
quic = ["gm-quic", "rustls"]
quic-test = ["quic"]

[lints]
workspace = true
